# med-acerto

./: .gitignore  Cargo.toml
.github/workflows/: cargo.yml
common/: Cargo.toml
common/src/entities/: question.rs
common/src/settings/: database.rs  mod.rs  secrets.rs  web.rs
core/: Cargo.toml
rest-server/: Cargo.toml
rest-server/migrations/: 20240206080651_users.down.sql  20240206080651_users.up.sql  20240206080728_questions.down.sql  20240206080728_questions.up.sql  20240206080819_comments.down.sql  20240206080819_comments.up.sql  20240211130954_init.up.sql
rest-server/migrations/setup/: 20240211130954_init.down.sql
rest-server/src/: main.rs  web.rs
rest-server/src/api/: mod.rs
rest-server/src/api/v1/: mod.rs
rest-server/src/api/v1/auth/: gate.rs  get.rs  mod.rs  post.rs
rest-server/src/api/v1/questions/: get.rs  mod.rs
rest-server/src/api/v1/questions/answer/: mod.rs  post.rs
rest-server/src/api/v1/questions/comments/: delete.rs  get.rs  mod.rs  patch.rs  post.rs
rest-server/src/api/v1/questions/statics/: get.rs  mod.rs
rest-server/src/api/v1/users/: get.rs  mod.rs
rest-server/src/json/: answer.rs  comment.rs  error.rs  mod.rs  question.rs
rest-server/src/models/: answer.rs  comment.rs  mod.rs  question.rs  user.rs
rest-server/tests/fixtures/: comments.sql  questions.sql  users.sql
