[workspace]
members = [
    "common",
    "core",
    "rest-server",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
sqlx = { version = "0.7.3", default-features = false, features = ["runtime-tokio", "postgres"] }
serde = { version = "1.0.193", default-features = false, features = ["derive"] }
log = { version = "0.4.20" }
env_logger = { version = "0.11.1" }