[package]
name = "rest-server"
version = "0.1.0"
edition.workspace = true

[dependencies]
common = { path = "../common" }
app-core = { path = "../core" }

sqlx = { workspace = true, features = ["migrate", "uuid", "macros"] }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }

axum = { version = "0.7.4", default-features = false, features = ["tokio", "http2", "json"] }
tower-http = { version = "0.5.1", default-features = false, features = ["cors"] }
futures-util = { version = "0.3.30", default-features = false, features = ["alloc"] }
http = { version = "1.0.0" }